--- a/src/style/menu_cards.css
+++ b/src/style/menu_cards.css
@@ -61,6 +61,10 @@
   justify-content: space-between;
 }
 
+.card-side-div.around {
+  justify-content: space-around;
+}
+
 .card-expand-div {
   justify-content: space-between;
   width: 99%;
