Refactored spellbook and added spontaneous casting

--- a/src/style/buttons.css
+++ b/src/style/buttons.css
@@ -3,7 +3,7 @@
   --btn-height-md: 2.4rem;
   --btn-height-lg: 3.1rem;
 
-  --btn-width-sm: 2.7vw;
+  --btn-width-sm: 2.6rem;
   --btn-width-md: 3.883rem;
   --btn-width-lg: 5.015rem;
 }
