Updated ui and added wizard school spec

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -8,6 +8,7 @@
   --blue: #017474;
   --white-t: #c0c0c0cc;
   --grey-t: #444a577e;
+  --grey-t2: #55575b19;
   --black-t: #0d0d0d1a;
   --blue-t: #015974b3;
   --blue-t2: #01597443;
