--- a/src/style/buttons.css
+++ b/src/style/buttons.css
@@ -14,18 +14,15 @@
 .modern-button,
 .levels-button,
 .modern-input,
-.modern-dropdown {
+.modern-dropdown,
+.flat-button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  box-shadow: 2px 2px 1.5px 0px var(--blue-t2),
-    inset -2px -2px 5px 0px var(--white-t);
   user-select: none;
   font-size: 1rem;
-  background-color: var(--white);
   color: var(--dark-grey);
-  border: 1px solid var(--white2);
   border-radius: 0.58rem;
 
   height: var(--btn-height-md);
@@ -34,6 +31,30 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+
+.comment {
+  box-shadow: 2px 2px 1.5px 0px var(--blue-t2),
+    inset -2px -2px 5px 0px var(--white-t);
+  background-color: var(--white);
+  border: 1px solid var(--white2);
+}
+
+.saving-button,
+.item-number-button,
+.add-item-button,
+.modern-button,
+.levels-button,
+.modern-input,
+.modern-dropdown,
+.flat-button {
+  box-shadow: 0px 0px 0px 2px var(--blue-t);
+  background-color: var(--grey-t2);
+  border: none;
+}
+.item-number-button,
+.add-item-button {
+  color: var(--white2);
 }
 
 /* Size modifiers */
