--- a/src/style/shop_inventory.css
+++ b/src/style/shop_inventory.css
@@ -15,6 +15,10 @@ th {
   border-bottom: 1px solid var(--white);
 }
 
+th.dark-grey {
+  border-bottom: 1px solid var(--dark-grey);
+}
+
 td {
   border-top: 1px solid var(--grey-t);
 }
