--- a/src/style/buttons.css
+++ b/src/style/buttons.css
@@ -37,7 +37,7 @@
 .modern-button,
 .levels-button,
 .modern-dropdown {
-  box-shadow: 2px 2px 1.5px 0px var(--blue-t2),
+  box-shadow: 2px 2px 1.5px 0px var(--main-t2),
     inset -2px -2px 5px 0px var(--white-t);
   background-color: var(--white);
   border: 1px solid var(--white2);
@@ -47,7 +47,7 @@
 .modern-input,
 .add-item-button,
 .flat-button {
-  box-shadow: 0px 0px 0px 2px var(--blue-t);
+  box-shadow: 0px 0px 0px 2px var(--main-t);
   background-color: var(--grey-t2);
   border: none;
 }
