--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,13 +5,13 @@
   --white2: #c0c0c0;
   --dark-grey: #333333;
   --black: #0d0d0d;
-  --main: #017474;
+  --main: #2fa6a1;
   --white-t: #c0c0c0cc;
   --grey-t: #444a577e;
   --grey-t2: #55575b19;
   --black-t: #0d0d0d1a;
-  --main-t: #015974b3;
-  --main-t2: #01597443;
+  --main-t: #2a9591b3;
+  --main-t2: #2a959143;
 }
 
 .app {
